styles.css
/*////////////////////////
    Table of Contents
    1. Global Styles
    2. Typography
    3. Layout
        3.1 Reusables
        3.2 Other
    4. Areas
        4.1 Header
        4.2 Introduction
        4.3 Projects
        4.4 Services
        4.5 Contact form
        4.6 Footer
    5. Media Queries
////////////////////////*/

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');

/* ------------------------------- 1. Global Styles -------------------------------- */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* ------------------------------- 2. Typography ----------------------------------- */

/* ------------------------------- 3. Layout --------------------------------------- */

/* --------------- 3.1 Reusables ----------------------- */
:root {
    --font-roboto: "roboto", sans-serif;
    --font-merryweather: "merriweather", serif;
    --main-purple: #5722CD;
    --main-blue: #4845E4;
    --main-pink: #ED4385;
    --main-black: #0C0C0C;
    --main-light-purple: #F2F0FF;
    --backgound-color: #F3F6F9;
    --service-tile: #7A7A7A;
}
/* --------------- 3.2 Other --------------------------- */

/* ------------------------------- 4. Areas ---------------------------------------- */

/* --------------- 4.1 Header ------------------------- */
header {
    position: relative;
    background: rgb(72,69,228);
    background: linear-gradient(90deg, rgba(72,69,228,1) 0%, rgba(85,0,255,1) 75%);
    color: var(--main-light-purple);
}

/*header::before {*/
/*    display: flex;*/
/*    justify-content: center;*/
/*    background-image: url("./assets/noise-texture.png");*/
/*    background-size: cover;*/
/*    background-position: center;*/
/*}*/

header::after {
    border-top: 20px solid transparent;
    border-right: 50vw solid transparent;
    border-bottom: 20px solid white;
    border-left: 50vw solid white;
    width: 0;
    height: 0;
    bottom: 0;
    content: "";
    display: block;
    position: absolute;
}

.header-list {
    list-style: none;
    font-family: var(--font-roboto);
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    padding-right: 20px;
    padding-left: 20px;
}

.header-list > li {
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 30px;
}

.header-list > li > a {
    text-decoration: none;
    color: var(--main-light-purple);
}

h1 {
    font-family: var(--font-merryweather);
    font-size: 40px;
    text-align: center;
    max-width: 720px;
    padding-top: 100px;
    box-sizing: border-box;
}

h2 {
    font-family: var(--font-merryweather);
    padding-top: 15px;
}

.sub-title {
    text-align: center;
    max-width: 500px;
    font-family: var(--font-roboto);
    /*letter-spacing: 1px;*/
    font-size: 25px;
    font-weight: lighter;
    margin-top: 20px;
}

.header-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.button {
    background-color: var(--main-pink);
    color: var(--main-light-purple);
    text-transform: uppercase;
    font-size: 12px;
    font-weight: bold;
    letter-spacing: 1px;
    padding: 20px;
    margin-top: 30px;
    border-radius: 30px;
    border: unset;
    box-shadow: 0 6px 10px 1px rgba(0,0,0,0.30);
}

.header-button {
    width: 220px;
    margin-bottom: 250px;
}

.squiggle-line-stripe {
    position: absolute;
    bottom: -30px;
    left: calc(50% - 35px);
    margin-top: 150px;
}

.triangle-wrapper {
    position: relative;
}

/* --------------- 4.2 Introduction ------------------------- */
.top-section {
    display: flex;
    position: relative;
    justify-content: center;
    padding-bottom: 50px;
}

.top-section::after {
    display: flex;
    justify-content: center;
    content: "hello";
    font-family: var(--font-roboto);
    font-size: 350px;
    font-weight: bold;
    max-width: 100px;
    position: absolute;
    color: #F4F3FE;
    z-index: -1;
}

.top-text-box {
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 100px;
    max-width: 650px;
    text-align: center;
}

.top-section-link {
    font-family: var(--font-roboto);
    font-size: 20px;
    font-weight: bold;
    padding-top: 100px;
}

.top-section-link > a {
    text-decoration: none;
}

/* --------------- 4.3 Projects ------------------------- */
.projects-section {
    position: relative;
    padding-top: 250px;
    padding-bottom: 100px;
    background-color: var(--backgound-color);
}

.projects-section::before {
    border-top: 20px solid white;
    border-right: 50vw solid white;
    border-bottom: 20px solid transparent;
    border-left: 50vw solid transparent;
    width: 0;
    height: 0;
    top: 0;
    content: "";
    display: block;
    position: absolute;
}

#projects-section::before {
    display: flex;
    justify-content: center;
    content: "work";
    font-family: var(--font-roboto);
    font-size: 450px;
    font-weight: bold;
    color: white;
    z-index: -1;
}


.projects-section::after {
    border-top: 20px solid transparent;
    border-right: 50vw solid transparent;
    border-bottom: 20px solid white;
    border-left: 50vw solid white;
    width: 0;
    height: 0;
    bottom: 0;
    content: "";
    display: block;
    position: absolute;
}

.h2-purple {
    color: var(--main-purple);
}

.project-article {
    display: flex;
    justify-content: space-between;
}

.project-article:nth-child(even) {
    flex-direction: row-reverse;
}

.project-article-text {
    padding: 80px;
    display: flex;
    flex-basis: 500px;
    flex-direction: column;
    flex-shrink: 0;
    justify-content: center;
}

.project-title::after {
    display: flex;
    content: url(./assets/squiggle_line.svg);
    margin-top: 20px;
}

.squiggle-line {
    margin-top: 30px;
    max-width: 50px;
}

.article-subtext {
    font-family: var(--font-roboto);
    font-size: large;
    font-weight: bold;
    margin-top: 50px;
    margin-bottom: 50px;
}

.project-link{
    display: flex;
    color: var(--main-purple);
    font-family: var(--font-roboto);
    text-decoration: none;
    text-transform: uppercase;
    font-size: 13px;
    font-weight: bold;
    letter-spacing: 1px;
    pointer-events: all;
}

.project-link::after {
    display: flex;
    content: "";
    width: 20px;
    height: 0;
    border-top: 2px solid var(--main-purple);
    margin-left: 20px;
    margin-top: 7px;
    transition: width .35s ease-in-out;
}

.project-link:hover::after {
    width: 100px;
}

.image-wrapper {
    flex-basis: 1000px;
    flex-grow: 0;
    flex-shrink: 1;
    padding: 40px;
}

.work-image {
    width: 100%;
    box-shadow: 0 17px 15px -6px rgba(0,0,0,0.41);
}

/* --------------- 4.4 Services ------------------------- */
.section-services {
    display: flex;
    justify-content: center;

}

.section-services::before {
    display: flex;
    justify-content: center;
    content: "services";
    font-family: var(--font-roboto);
    font-size: 250px;
    font-weight: bold;
    max-width: 100px;
    position: absolute;
    color: #F4F3FE;
    z-index: -1;
}

.section-services-wrapper {
    display: flex;
    justify-content: center;
    max-width: 1400px;
    flex-direction: row;
    flex-wrap: wrap;
    padding-top: 200px;
    padding-bottom: 70px;
}

.service-article {
    max-width: 320px;
    aspect-ratio: 1 / 1;
    display: flex;
    flex-direction: column;
    border: 1px solid var(--main-purple);
    margin: 18px;
    padding: 30px;
    box-shadow: 0 5px 15px #C1C3C6;
    background-color: white;
}

.services-icon {
    max-width: 70px;
}

.service-header {
    color: var(--main-purple);
    font-size: 20px;
}

.service-text {
    font-family: var(--font-roboto);
    color: #7A7A7A;
    font-size: 13px;
    margin-top: 20px;
}

/* --------------- 4.5 Contact form ------------------------- */
.form-section-wrapper {
    display: flex;
    position: relative;
    justify-content: center;
    background: rgb(72,69,228);
    background: linear-gradient(90deg, rgba(72,69,228,1) 0%, rgba(85,0,255,1) 75%);
    padding: 100px;
}

.form-section-wrapper::before {
    border-top: 20px solid white;
    border-right: 50vw solid white;
    border-bottom: 20px solid transparent;
    border-left: 50vw solid transparent;
    width: 0;
    height: 0;
    top: 0;
    content: "";
    display: block;
    position: absolute;
}

.form-section {
    display: flex;
    flex-direction: column;
    flex-basis: 800px;
    align-content: center;
    text-align: center;
    color: var(--main-light-purple);
}

.form {
    display: flex;
    flex-direction: column;
}

.form > label {
    text-align: start;
    color: var(--main-light-purple);
    font-family: var(--font-roboto);
    font-weight: bold;
    padding-top: 20px;
}

.input {
    width: 100%;
    height: 50px;
    border-radius: 3px;
    border: none;
    padding-left: 20px;
}

.input::placeholder {
    font-family: var(--font-roboto);
    font-weight: bold;
}

textarea {
    padding-top: 15px;
    width: 100%;
    border-radius: 3px;
    border: none;
    padding-left: 20px;
}

textarea::placeholder {
    font-family: var(--font-roboto);
    font-weight: bold;
}

.form-header {
    font-size: 45px;
}

.form-sub-text {
    font-family: var(--font-roboto);
    margin-top: 20px;
}

.form-button {
    width: 170px;
    align-self: center;
}

/* --------------- 4.6 Footer ------------------------- */
footer {
    background-color: var(--main-black);
    color: var(--main-light-purple);
    font-family: var(--font-roboto);
    text-align: center;
    padding: 20px;
}

/* ------------------------------- 5. Media Queries -------------------------------- */
@media (max-width: 600px) {
    .header-list {
        justify-content: space-between;
    }

    .project-article {
        display: flex;
        flex-direction: column;
        flex-flow: column-reverse;
        padding-top: 0;
        padding-bottom: 0;
    }

    .project-article:nth-child(even) {
        flex-flow: column-reverse;
    }

    .image-wrapper {
        padding-top: 0;
        padding-bottom: 0;
        flex-basis: 100%;
    }

    .project-article-text {
        flex-basis: 300px;
        padding-top: 10px;
        padding-left: 40px;
        padding-bottom: 30px;
    }
}

